use UTF8 charset to fix spotted bug o